1. Análise Técnica do Código Terraform.READM.md

--- a/DESAFIO ONLINE DA VEXPENSES/1. Análise Técnica do Código Terraform.READM.md
+++ b/DESAFIO ONLINE DA VEXPENSES/1. Análise Técnica do Código Terraform.READM.md
@@ -1,29 +1,55 @@
 # Descrição Técnica do Código
 
-Este código em Terraform tem o objetivo de criar uma infraestrutura automatizada na AWS. Ele configura uma **VPC** (Virtual Private Cloud), sub-rede, tabela de rotas, gateway de internet, segurança de rede, além de lançar uma instância **EC2** (servidor virtual) rodando o sistema operacional **Debian 12**. A seguir, cada parte do código é explicada em detalhes:
+O código em Terraform que estou explicando tem o objetivo de criar uma infraestrutura na AWS de
+forma automática. Ele configura uma VPC (Virtual Private Cloud), sub-rede, tabela de rotas, 
+gateway de internet, segurança de rede, além de lançar uma instância EC2 (um servidor virtual) 
+rodando o sistema operacional Debian 12. Abaixo, explico cada parte com mais detalhes:
 
-## 1. Provedor AWS
-O código define que todos os recursos serão criados na AWS, utilizando a região `us-east-1` (Leste dos EUA).
+## Provedor AWS
+O primeiro bloco define que todos os recursos vão ser criados na **AWS**, especificamente na região 
+us-east-1 (Leste dos EUA).
 
-## 2. Variáveis
+## Variáveis
 São definidas duas variáveis importantes:
 - **projeto**: Define o nome do projeto (padrão: "VExpenses").
 - **candidato**: Define o nome do candidato (padrão: "SeuNome").
 
-Essas variáveis são usadas para nomear vários recursos, como a chave SSH, a VPC, e a instância EC2. Isso facilita a personalização do código para diferentes projetos ou usuários.
+Essas variáveis são usadas em várias partes do código para nomear recursos, como a chave SSH, a 
+VPC, e até a instância EC2, o que facilita personalizar o código para diferentes projetos ou usuários.
 
-## 3. Criação de Chave SSH
-O código gera uma chave privada de 2048 bits utilizando o algoritmo RSA. Esta chave é usada para acessar a instância EC2 via SSH. A chave pública correspondente é enviada para a AWS, criando um par de chaves, garantindo que apenas quem possua a chave privada possa acessar o servidor.
+## Criação de Chave SSH
+O código cria uma **chave privada de 2048 bits** usando o algoritmo RSA. Esta chave é usada para 
+acessar o servidor EC2 via SSH. Além disso, a chave pública é enviada para a AWS como um par de 
+chaves, o que garante que somente quem tiver a chave privada consiga acessar o servidor.
 
-## 4. VPC (Virtual Private Cloud)
-A **VPC** é uma rede virtual isolada onde a instância EC2 será executada. A faixa de IP usada é `10.0.0.0/16`, permitindo a criação de muitos dispositivos conectados. O suporte a DNS é habilitado para permitir a resolução de nomes dentro da rede.
+## VPC (Virtual Private Cloud)
+A VPC é uma rede virtual isolada onde a instância EC2 será executada. Ela tem a faixa de IP 
+10.0.0.0/16, que pode comportar muitos dispositivos conectados. A VPC tem suporte para resolver
+nomes DNS, o que ajuda a comunicação entre as máquinas dentro da rede.
 
-## 5. Sub-rede
-Dentro da VPC, uma sub-rede menor é criada com a faixa de IP `10.0.1.0/24`, suportando até 256 endereços IP. Esta sub-rede está localizada na zona de disponibilidade `us-east-1a`, garantindo que os recursos estejam fisicamente próximos, otimizando a performance.
 
-## 6. Internet Gateway e Tabela de Rotas
-Para permitir o acesso da instância EC2 à internet, o código cria um **Internet Gateway**. Além disso, é configurada uma **Tabela de Rotas** que direciona todo o tráfego da rede (`0.0.0.0/0`) para o gateway, permitindo que a sub-rede tenha conectividade com a internet.
+## Sub-rede
+Dentro da VPC, uma sub-rede menor é criada com a faixa de IP 10.0.1.0/24, que suporta até 256 
+endereços IP. Esta sub-rede está na zona de disponibilidade us-east-1a, garantindo que os recursos 
+fiquem fisicamente próximos.
 
-## 7. Grupo de Segurança
-Um **grupo de segurança** é configurado para controlar o tráfego de rede que entra e sai da instância EC2:
-- **Regras de entrada**: Permite conexões SSH (porta 2222) de um IP específico (ajuste necessário), garantindo
+## Internet Gateway e Tabela de Rotas
+Para que as instâncias EC2 dentro da VPC possam acessar a internet, o código cria um **Internet 
+Gateway**. Além disso, uma tabela de rotas é configurada para direcionar todo o tráfego da rede 
+(0.0.0.0/0) para o gateway, permitindo que a sub-rede tenha acesso à internet.
+
+## Grupo de Segurança
+- Permite **conexões SSH** (porta 22) de qualquer lugar, para que possamos acessar a instância remotamente.
+- Permite **todo o tráfego de saída**, sem restrições de portas ou protocolos, garantindo que a instância possa se comunicar com outros serviços.
+
+## 8. Instância EC2
+O código lança uma **instância EC2** do tipo `t2.micro`, rodando o **Debian 12**. A instância:
+- Está na sub-rede criada.
+- Usa o par de chaves SSH para acesso seguro.
+- Possui um **volume de armazenamento** de 20 GB do tipo SSD (gp2).
+- Ao ser iniciada, executa um **script de inicialização** que faz uma atualização e melhora do sistema (comandos `apt-get update` e `apt-get upgrade`).
+
+## 9. Outputs
+O código também gera duas saídas:
+- A **chave privada** gerada, que é necessária para acessar a instância EC2 via SSH.
+- O **IP público** da instância EC2, que permite acessarmos a máquina remotamente pela internet.
