1. Análise Técnica do Código Terraform

--- a/DESAFIO ONLINE DA VEXPENSES/1. Análise Técnica do Código Terraform.READM.md
+++ b/DESAFIO ONLINE DA VEXPENSES/1. Análise Técnica do Código Terraform.READM.md
@@ -42,14 +42,14 @@ Gateway**. Além disso, uma tabela de rotas é configurada para direcionar todo 
 - Permite **conexões SSH** (porta 22) de qualquer lugar, para que possamos acessar a instância remotamente.
 - Permite **todo o tráfego de saída**, sem restrições de portas ou protocolos, garantindo que a instância possa se comunicar com outros serviços.
 
-## 8. Instância EC2
+## Instância EC2
 O código lança uma **instância EC2** do tipo `t2.micro`, rodando o **Debian 12**. A instância:
 - Está na sub-rede criada.
 - Usa o par de chaves SSH para acesso seguro.
 - Possui um **volume de armazenamento** de 20 GB do tipo SSD (gp2).
 - Ao ser iniciada, executa um **script de inicialização** que faz uma atualização e melhora do sistema (comandos `apt-get update` e `apt-get upgrade`).
 
-## 9. Outputs
+## Outputs
 O código também gera duas saídas:
 - A **chave privada** gerada, que é necessária para acessar a instância EC2 via SSH.
 - O **IP público** da instância EC2, que permite acessarmos a máquina remotamente pela internet.
