2. Modificação e Melhoria do Código Terraform.READM.md

--- a/DESAFIO ONLINE DA VEXPENSES/2. Modificação e Melhoria do Código Terraform.READM.md
+++ b/DESAFIO ONLINE DA VEXPENSES/2. Modificação e Melhoria do Código Terraform.READM.md
@@ -1,35 +1,47 @@
 # Alterações Realizadas
 
-Foram feitas quatro mudanças no código Terraform original para melhorar a infraestrutura fornecida. A seguir, explico cada uma delas de forma simplificada.
+Fiz quatro mudanças no código Terraform para melhorar a infraestrutura que me foi fornecida. 
+ Vou explicar cada uma delas e o que elas fazem de forma mais simples.
+As mudanças que fiz melhoram a segurança da instância EC2, limitando o acesso SSH a um IP 
+específico e mudando a porta de conexão. Também instalei o Nginx para que a instância possa 
+atuar como um servidor web assim que estiver ativa. Além disso, adicionei um alarme do 
+CloudWatch para monitorar o uso da CPU, ajudando a garantir que a instância funcione 
+corretamente.
 
-Essas alterações aumentam a segurança da instância EC2 ao limitar o acesso SSH a um IP específico e alterar a porta de conexão. Além disso, foi instalado o Nginx para que a instância funcione como servidor web logo após ser criada, e adicionado um alarme no CloudWatch para monitorar o uso da CPU, garantindo o bom funcionamento da instância.
-
-## 1. Mudança no Script de Inicialização da EC2 (user_data)
-- **O que fiz:** Adicionei comandos no script de inicialização para instalar e configurar o Nginx, que é um servidor web.
+## Mudança no Script de Inicialização da EC2 (user_data)
+- **O que fiz:** Adicionei comandos no script de inicialização para instalar e configurar o Nginx, que é um servidor web,
+  no script que roda quando a instância EC2 é criada.
   - Comandos executados:
     - Instala o Nginx (`apt-get install -y nginx`).
     - Inicia o Nginx (`systemctl start nginx`).
-    - Configura o Nginx para iniciar automaticamente em reinicializações (`systemctl enable nginx`).
+    - Faz o Nginx rodar automaticamente quando a máquina reiniciar (`systemctl enable nginx`).
   
-- **Por que fiz:** Para garantir que o Nginx já esteja rodando assim que a instância for criada, facilitando a criação de um servidor web sem necessidade de configurações manuais posteriores.
+- **Por que fiz:** : Isso permite que o Nginx já esteja rodando assim que a instância for criada. 
+Dessa forma, se precisar de um servidor web, ele já estará pronto.
 
-- **Resultado esperado:** Assim que a instância EC2 for iniciada, o Nginx estará rodando e a instância estará pronta para servir conteúdo web imediatamente.
+- **Resultado esperado:**  Assim que a instância EC2 for iniciada, o Nginx estará rodando e a 
+instância estará pronta para servir conteúdo web. Isso facilita porque não terá que 
+configurar isso manualmente depois.
 
-## 2. Criação de um Alarme no CloudWatch
-- **O que fiz:** Adicionei um alarme no CloudWatch para monitorar a utilização da CPU da instância EC2. O alarme dispara se a CPU passar de 80% por mais de 60 segundos.
+## Criação de um Alarme no CloudWatch
+- **O que fiz:** Adicionei um alarme no CloudWatch que monitora a utilização da CPU da 
+instância EC2. Se a CPU passar de 80% durante 60 segundos, o alarme é disparado.
 
-- **Por que fiz:** Monitorar o desempenho da instância. Caso a CPU esteja sobrecarregada, será possível identificar o problema e tomar medidas, como otimização ou aumento dos recursos.
+- **Por que fiz:** Esse alarme é importante para monitorar o desempenho da instância. Se a 
+CPU estiver muito alta, isso pode indicar que a instância está sobrecarregada, e assim 
+podento tomar medidas para resolver, como otimizar o código ou aumentar os recursos.
 
-- **Resultado esperado:** O alarme avisa se a CPU estiver com uso excessivo, permitindo ações rápidas para manter o bom funcionamento da instância.
+- **Resultado esperado:** O alarme vai avisar se a CPU estiver muito alta, ajudando a garantir 
+que a instância funcione bem o que permite agir rápido em caso de problemas.
 
-## 3. Mudanças no Grupo de Segurança
+## Mudanças no Grupo de Segurança
 - **O que fiz:** Alterei as regras do grupo de segurança para permitir conexões SSH apenas de um IP específico e mudei a porta padrão do SSH de 22 para 2222.
 
 - **Por que fiz:** Para aumentar a segurança da instância, limitando o acesso SSH a um IP confiável e alterando a porta padrão, reduzindo o risco de ataques externos.
 
 - **Resultado esperado:** O acesso SSH será restrito ao IP configurado, garantindo maior segurança e reduzindo as chances de acessos não autorizados.
 
-## 4. Configuração da Porta SSH na Instância
+## Configuração da Porta SSH na Instância
 - **O que fiz:** Adicionei um comando no script de inicialização para alterar a porta SSH para 2222 no arquivo de configuração da instância e reiniciar o serviço SSH.
 
 - **Resultado esperado:** A instância estará configurada para aceitar conexões SSH pela porta 2222, em conformidade com as regras do grupo de segurança, mantendo o acesso seguro e consistente.
